src/test/ui/did_you_mean/issue-38147-4.stderr
error[E0596]: cannot borrow `*f.s` as mutable, as it is behind a `&` reference
  --> $DIR/issue-38147-4.rs:6:5
   |
LL | fn f(x: usize, f: &Foo) {
   |                   ---- help: consider changing this to be a mutable reference: `&mut Foo<'_>`
LL |     f.s.push('x');
   |     ^^^ `f` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
